Fixed dark-overlay z-index

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -246,7 +246,6 @@ header h2 {
     text-align: left;
     visibility: visible;
     margin-right: 38px;
-    z-index: -1;
 }
 
 .toggle {
@@ -678,6 +677,7 @@ label input:checked+.menu+ul {
     transition: all 700ms cubic-bezier(1, 0, 0, 1);
     opacity: 0;
     visibility: hidden;
+    z-index: 1;
 }
 
 label ul {
